@@ -1,5 +1,5 @@
 /*--------------------------------------------------------------------
- *	$Id: common_options.txt,v 1.16 2009-01-21 18:30:31 remko Exp $
+ *	$Id: common_options.txt,v 1.17 2009-04-15 06:11:05 guru Exp $
  *
  *	Copyright (c) 1991-2008 by P. Wessel and W. H. F. Smith
  *	See COPYING file for copying and redistribution conditions.
@@ -63,6 +63,7 @@
 #define GMT_f_OPT	OPT(f)[\fBi\fP|\fBo\fP]\fIcolinfo\fP
 #define GMT_fi_OPT	OPT(f)\fIcolinfo\fP
 #define GMT_fo_OPT	OPT(f)\fIcolinfo\fP
+#define GMT_g_OPT	OPT(g)[+]\fBx\fP|\fBy\fP|\fBd\fP|\fBX\fP|\fBY\fP|\fBD\fP\fIgap\fP[\fBu\fP]
 
 /* Options for map rose and scale, used in pscoast and psbasemap */
 #define GMT_TROSE	OPT(T)[\fBf\fP|\fBm\fP][\fBx\fP]\fIlon0\fP/\fIlat0\fP/\fIsize\fP[/\fIinfo\fP][\fB:\fPw,e,s,n\fB:\fP][\fB+\fP\fIgint\fP[/\fImint\fP]]
