@@ -1,0 +1,12 @@
+.TP
+OPT(F)
+Ignored if OPT(S) is set.
+Examine the spacing between consecutive data points in order to impose breaks in the line.
+Append \fBx\fP|\fBX\fP or \fBy\fP|\fBY\fP to define a gap when there is a large enough change in the x or y coordinates, respectively,
+or \fBd\fP|\fBD\fP for distance gaps; use upper case to calculate gaps from projected coordinates.
+Append \fIgap\fP and optionally a unit \fBu\fP.
+For geographic data (\fBx\fP|\fBy\fP|\fBd\fP), the unit \fBu\fP may be m\fBe\fPter [Default], \fBk\fPilometer, \fBm\fPiles, or \fBn\fPautical miles.
+For projected data (\fBX\fP|\fBY\fP|\fBD\fP), choose from \fBi\fPnch, \fBc\fPentimeter, \fBm\fPeter, or \fBp\fPoints [Default unit set by MEASURE_UNIT].
+Note: For \fBx\fP|\fBy\fP with time data the unit is instead controlled by TIME_UNIT.
+Repeat the option to specify multiple criteria, of which any can be met to produce a line break.
+Prepend \fB+\fP to indicate that all critera must be met.
